# sillydoom

./: README.md  build.sh
assets/: PUT_WAD_HERE.txt
docs/: 01-quickstart.md  02-architecture.md  03-platform-layer.md  04-64bit-porting.md  05-switch-port.md  06-audio.md  07-controls.md  README.md
ext/: CMakeLists.txt
ext/doom_audio/: doom_audio.h  midi_synth.c  mus_parser.c  synth_fm.c
linux/: build.sh
src/: anim.is  audio.is  automap.is  finale.is  game.is  hud.is  intermission.is  main.is  main_engine.is  main_switch.is  map.is  menu.is  menu_draw.is  messages.is  player.is  render.is  save_load.is  specials.is  things_defs.is  things_logic.is  weapon.is
switch/: Makefile  SWITCH_README.txt  doom_ext_bridge.c
